FIX: Tmux minimal config

--- a/modules/home/config/tmux/config/tmux.conf
+++ b/modules/home/config/tmux/config/tmux.conf
@@ -5,7 +5,7 @@ unbind C-b
 bind-key C-a send-prefix
 
 unbind %
-bind | split-window -h 
+bind | split-window -h
 
 unbind '"'
 bind - split-window -v
@@ -31,6 +31,20 @@ unbind -T copy-mode-vi MouseDragEnd1Pane # don't exit copy mode when dragging wi
 
 # remove delay for exiting insert mode with ESC in Neovim
 set -sg escape-time 10
+
+set -g @catppuccin_flavor 'mocha'
+set -g @catppuccin_window_status_style "rounded"
+
+# Clear the status bar
+set -g status-left ""
+set -g status-right ""
+
+# Center the window status
+set -g status-justify centre
+
+# Use catppuccin's window status format
+set -g window-status-current-format "#[fg=#{@thm_bg},bg=#{@thm_blue}] #W #[fg=#{@thm_blue},bg=#{@thm_bg}]"
+set -g window-status-format "#[fg=#{@thm_fg},bg=#{@thm_gray}] #W #[fg=#{@thm_gray},bg=#{@thm_bg}]"
 
 # tpm plugin
 # set -g @plugin 'tmux-plugins/tpm'
