IMPROVE: Add custom resurrect config, add separators

--- a/modules/home/config/tmux/config/tmux.conf
+++ b/modules/home/config/tmux/config/tmux.conf
@@ -42,6 +42,10 @@ set -g status-right ""
 # Center the window status
 set -g status-justify centre
 
+# Set rounded separators
+set -g @catppuccin_window_left_separator "◖"
+set -g @catppuccin_window_right_separator "◗"
+
 # Customize window appearance
 set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_current_text "#W"
