FIX: Tmux resurrect

--- a/modules/home/config/tmux/config/tmux.conf
+++ b/modules/home/config/tmux/config/tmux.conf
@@ -53,3 +53,9 @@ set -g @catppuccin_window_current_text "#W"
 # Ensure there's enough space
 set -g status-left-length 100
 set -g status-right-length 100
+
+resurrect_dir="$HOME/.tmux/resurrect"
+set -g @resurrect-dir $resurrect_dir
+set -g @resurrect-hook-post-save-all "sed -i 's/--cmd lua.*--cmd set packpath/--cmd \"lua/g; s/--cmd set rtp.*\$/\"/' $resurrect_dir/last"
+set -g @resurrect-capture-pane-contents 'on'
+set -g @resurrect-processes '"~nvim"'
