IMPROVE: Add tmux cntinuum

--- a/modules/home/config/tmux/config/tmux.conf
+++ b/modules/home/config/tmux/config/tmux.conf
@@ -59,3 +59,8 @@ set -g @resurrect-dir $resurrect_dir
 set -g @resurrect-hook-post-save-all "sed -i 's/--cmd lua.*--cmd set packpath/--cmd \"lua/g; s/--cmd set rtp.*\$/\"/' $resurrect_dir/last"
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-processes '"~nvim"'
+
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '1'
+set -g @continuum-boot 'on'         # Enable automatic tmux start
+set -g status-right 'Continuum: #{continuum_status}'  # Optional: shows status
